# zerbania

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
zerbania/: main.py
